Finally got venue working

--- a/templates/home.html
+++ b/templates/home.html
@@ -49,16 +49,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <a href="/Filmshowings/John%20Wick:%20Chapter%204"><img src="../static/images/john_wick.jpeg" class="d-block w-100" alt="john_wick"> </a>
+            <a href="/Filmshowings/1"><img src="../static/images/john_wick.jpeg" class="d-block w-100" alt="john_wick"> </a>
           </div>
           <div class="carousel-item">
-            <a href="/Filmshowings/Dungeons%20&%20Dragons:%20Honor%20Among%20Thieves">  <img src="../static/images/dungeons2.jpg" class="d-block w-100" alt="dungeons"></a>
+            <a href="/Filmshowings/2">  <img src="../static/images/dungeons2.jpg" class="d-block w-100" alt="dungeons"></a>
           </div>
           <div class="carousel-item">
-            <a href="/Filmshowings/Shazam!%20Fury%20of%20the%20Gods"><img src="../static/images/shazam.jpeg" class="d-block w-100" alt="shazam2"></a>
+            <a href="/Filmshowings/3"><img src="../static/images/shazam.jpeg" class="d-block w-100" alt="shazam2"></a>
           </div>
           <div class="carousel-item">
-            <a href="/Filmshowings/65"> <img src="../static/images/65.jpg" class="d-block w-100" alt="65"> </a>
+            <a href="/Filmshowings/4"> <img src="../static/images/65.jpg" class="d-block w-100" alt="65"> </a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
