--- a/templates/info.html
+++ b/templates/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pick'N'Flix - About Us</title>
+    <title>Pick'N'Flix</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid navbar">
-      <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+      <a class="navbar-brand" href="/Index">Pick'N'Flix</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,7 +48,7 @@
 
   
 <div class="container-fluid bg-1 text-center">
-  <a href="index.html"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
+  <a href="/Index"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
 
 <h1>Pick 'N' Flix - About Us</h1>
 
