--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pick'N'Flix - Coming Soon</title>
+    <title>Pick'N'Flix</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -10,12 +10,9 @@
 
 <body>
 
-  <h1>Coming Soon</h1>
-
-  
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid navbar">
-      <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+      <a class="navbar-brand" href="/Index">Pick'N'Flix</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,6 +45,7 @@
     </div>
   </nav>
 
+<center>
 <div class="row">
 <div>
 <form>
@@ -77,6 +75,7 @@
     <closeform></closeform></form>
 </form></div>
 </div>
+</center>
 
   <div class="container">
     <footer class="py-3 my-4">
