--- a/static/styles/mainstyle2.css
+++ b/static/styles/mainstyle2.css
@@ -87,8 +87,8 @@ body {
 
   .img__wrap {
     position: relative;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 250px;
+    max-width: 250px;
   
   }
   .img__description_layer {
