home page ammended

--- a/templates/home.html
+++ b/templates/home.html
@@ -81,18 +81,24 @@
     <div class="container-fluid bg-3 text-center">
       <h3>Know what you want to watch, but not where to see it?</h3>
       <h3>Our site will find all the local listings in your area!</h3>
-      <img src="../static/images/Chickens_movies.jpg" alt="Chickens_movies" width="250">
+      <br>
+      <a href="/Filmshowings"><img src="../static/images/guardians.jpg" alt="Guardians of the galaxy3" width="250"> </a>
     </div>
-      
+  <br>  
+  <br>
     <div class="container-fluid bg-2 text-center">
       <h4>Need Inspiration? Tell us a Genre you fancy and our Movie Generator will suggest a film to watch!</h4>
-      <img src="../static/images/chick1.jpg" alt="chick1" width="250">
+      <br>
+      <a href="/Recommendations"> <img src="../static/images/mario.jpg" alt="Super Bario Bros" width="250"> </a>
     </div>
+<br>
+<br>
 
     <div class="container-fluid bg-4 text-center">
       <h4>Want to check out Reviews of the latest Movies?</h4>
       <h4> We have you covered! </h4>
-      <img src="../static/images/chick2jpg.jpg" alt="chick2" width="250">
+      <br>
+      <a href="https://www.empireonline.com/movies/reviews/"> <img src="../static/images/bookclub.jpg" alt="Book Club" width="250"> </a>
     </div>
 
       <div class="container">
