--- a/templates/info.html
+++ b/templates/info.html
@@ -65,30 +65,20 @@
 </div>
 
 
-<div class="container">
+<div class="footer">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <lr>
-        <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="./login.html">Login</a>
-        </li>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Partners">Our Partners</a></li>
+        <li class="nav-item"><a href="/Aboutus">About</a></li>
       </lr>
-      <lr>
-        <li class="nav-item"><a href="recommendations.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Terms">Terms & conditions</a></li>
+        <li class="nav-item"><a href="/Faqs">FAQs</a></li>
       </lr>
-      <lr>
-        <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
-        <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
-      </lr>
-      <lr>
-        <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
-        <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      </lr>
-      <lr>
-        <li class="nav-item"><a href="cookies.html" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
-        <li class="nav-item"><a href="privacypolicy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Cookies">Manage Cookies</a></li>
+        <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
       </lr>
     </ul>
     <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
