--- a/templates/listings.html
+++ b/templates/listings.html
@@ -72,15 +72,25 @@
     <button onclick="history.back()">Go Back</button>
 </center>
 
-
-
-
- 
-
-
-  <footer>
-      <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+<div class="footer">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Partners">Our Partners</a></li>
+        <li class="nav-item"><a href="/Aboutus">About</a></li>
+      </lr>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Terms">Terms & conditions</a></li>
+        <li class="nav-item"><a href="/Faqs">FAQs</a></li>
+      </lr>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Cookies">Manage Cookies</a></li>
+        <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
+      </lr>
+    </ul>
+    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
+</div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
