--- a/templates/partners.html
+++ b/templates/partners.html
@@ -52,35 +52,25 @@ Sed maximus sapien non metus lobortis, eget vehicula tellus dignissim. Nunc grav
 Morbi ac ullamcorper neque, quis placerat diam. Etiam non egestas arcu. Vestibulum id elit at nunc luctus lobortis. Sed purus justo, porta nec bibendum vitae, aliquam at risus. Nullam vestibulum dictum sem, ac tempor ante ullamcorper non. In vehicula leo nisi, sit amet finibus est ullamcorper id. Maecenas blandit ut justo faucibus lacinia. Vivamus in venenatis quam. Sed eu elit elit. Morbi in lectus nisi.</a>
 
 
-<div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <lr>
-          <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-          <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="./login.html">Login</a>
-          </li>
-        </lr>
-        <lr>
-          <li class="nav-item"><a href="RECOMMENDATIONS.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
-        </lr>
-        <lr>
-          <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
-          <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
-        </lr>
-        <lr>
-          <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
-          <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        </lr>
-        <lr>
-          <li class="nav-item"><a href="cookies.html" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
-          <li class="nav-item"><a href="privacypolicy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
-        </lr>
-      </ul>
-      <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
-    </footer>
-  </div>
+<div class="footer">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Partners">Our Partners</a></li>
+        <li class="nav-item"><a href="/Aboutus">About</a></li>
+      </lr>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Terms">Terms & conditions</a></li>
+        <li class="nav-item"><a href="/Faqs">FAQs</a></li>
+      </lr>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Cookies">Manage Cookies</a></li>
+        <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
+      </lr>
+    </ul>
+    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+  </footer>
+</div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>   
