action images edited

--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="img__wrap col-sm-4">
-        <img class="image" src="../static/images/action.jpeg" alt="Action movies"/>
+        <img class="image" src="../static/images/action2.jpg" alt="Action movies"/>
         <div class="img__description_layer">
             <a class="linky" href="/Recommendations/Action"> <p class="img__description results"> Action</p></a>
         </div>
