--- a/templates/partners.html
+++ b/templates/partners.html
@@ -35,11 +35,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/filmshowings">Film Times</a>
           </li>
-          <form class="d-flex" role="search">
+        </ul>
+          <form class="d-flex ms-auto order-5 search" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
-        </ul>
+        
       </div>
     </div>
   </nav>
@@ -68,7 +69,7 @@ Morbi ac ullamcorper neque, quis placerat diam. Etiam non egestas arcu. Vestibul
         <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
       </lr>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+    <p class="text-center copy">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
 </div>
 
