--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -36,11 +36,12 @@
             <li class="nav-item">
               <a class="nav-link" href="/Filmshowings">Film Times</a>
             </li>
-            <form class="d-flex" role="search">
+          </ul>
+            <form class="d-flex ms-auto order-5 search" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-          </ul>
+          
         </div>
       </div>
     </nav>
@@ -55,7 +56,7 @@
     </div>
 
 
-  <div class="container-fluid bg-1 text-center padding=20px">
+  <div class="container-fluid bg-1 text-center">
     <div class="row">
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/comedy3.jpg" alt="Comedy movies"/>
@@ -63,6 +64,7 @@
                 <a class="linky" href="/Recommendations/Comedy"> <p class="img__description results"> Comedy</p></a>
             </div>
       </div>
+    
 
       <div class="img__wrap col-sm-4">
         <img class="image" src="../static/images/action2.jpg" alt="Action movies"/>
@@ -99,7 +101,7 @@
       </div>
 
       <div class="img__wrap col-sm-4">
-        <img class="image" src="../static/images/question.jpg" alt="Question marks"/>
+        <img class="image" src="../static/images/question2.jpg" alt="Question marks"/>
         <div class="img__description_layer">
             <a class="linky" href="/Recommendations/Random"> <p class="img__description results"> Random </p></a>
         </div>
@@ -129,7 +131,7 @@
         <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
       </lr>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+    <p class="text-center copy">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
 </div>
 
