--- a/templates/info.html
+++ b/templates/info.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href= "../static/styles/holding_page.css" rel="stylesheet" type="text/css" />
     <link href= "../static/styles/mainstyle2.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -37,11 +36,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/Filmshowings">Film Times</a>
           </li>
-          <form class="d-flex" role="search">
+        </ul>
+          <form class="d-flex ms-auto order-5 search" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
-        </ul>
+        
       </div>
     </div>
   </nav>
@@ -51,6 +51,7 @@
   <a href="/Index"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
 
 <h1>Pick 'N' Flix - About Us</h1>
+<br>
 
 <div class="container-fluid bg-4 text-center">
   Pick n’Flix was created by 6 guys who love to watch movies yet found the whole booking experience rather frustrating! 
@@ -81,7 +82,7 @@
         <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
       </lr>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+    <p class="text-center copy">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
 </div>
 
