--- a/templates/login.html
+++ b/templates/login.html
@@ -36,18 +36,21 @@
           <li class="nav-item">
             <a class="nav-link" href="/Filmshowings">Film Times</a>
           </li>
-          <form class="d-flex" role="search">
+        </ul>
+          <form class="d-flex ms-auto order-5 search" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
-        </ul>
+        
       </div>
     </div>
   </nav>
 
 
 
-
+  <center>
+    <a href="/Index"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
+  </center>
 <center> 
 <div class="row">
 <div>
@@ -86,7 +89,7 @@
         <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
       </lr>
     </ul>
-    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+    <p class="text-center copy">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
 </div>
 
