--- a/templates/partners.html
+++ b/templates/partners.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pick'N'Flix - Our Partners</title>
+    <title>Pick'N'Flix</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
@@ -11,29 +11,29 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid navbar">
-      <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+      <a class="navbar-brand" href="/Index">Pick'N'Flix</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="./home.html">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./signup.html">Sign Up</a>
+            <a class="nav-link" href="/Signup">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./login.html">Login</a>
+            <a class="nav-link" href="/Login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./info.html">About Us</a>
+            <a class="nav-link" href="/Aboutus">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./recommendations.html">Recommendations</a>
+            <a class="nav-link" href="/Recommendations">Recommendations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/filmshowings">Film Times</a>
+            <a class="nav-link" href="/Filmshowings">Film Times</a>
           </li>
         </ul>
           <form class="d-flex ms-auto order-5 search" role="search">
@@ -44,7 +44,7 @@
       </div>
     </div>
   </nav>
-<h1>Coming Soon - Our Partners</h1>
+<h1>Our Partners</h1>
 
 <a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus venenatis odio quis sodales. Donec pulvinar vehicula hendrerit. Donec viverra diam quis augue laoreet, at pharetra velit sollicitudin. Nulla vel ligula lorem. Aliquam bibendum lobortis elementum. Nulla lobortis pellentesque turpis, in commodo metus posuere ut. Nullam varius turpis ex, vitae tempor nibh rhoncus quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultrices metus eu lacinia lacinia. Nam bibendum placerat est, vel tempus metus varius quis. Phasellus viverra accumsan commodo. Donec pharetra massa eget molestie viverra.
 
