partners and logo added

--- a/templates/partners.html
+++ b/templates/partners.html
@@ -44,6 +44,10 @@
       </div>
     </div>
   </nav>
+
+  <div class="container-fluid bg-1 text-center">
+  <a href="/Index"><img src="../static/images/pic_n_mix.png"  alt="logo" width="250"></a>
+
 <h1>Our Partners</h1>
 
 <a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus venenatis odio quis sodales. Donec pulvinar vehicula hendrerit. Donec viverra diam quis augue laoreet, at pharetra velit sollicitudin. Nulla vel ligula lorem. Aliquam bibendum lobortis elementum. Nulla lobortis pellentesque turpis, in commodo metus posuere ut. Nullam varius turpis ex, vitae tempor nibh rhoncus quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultrices metus eu lacinia lacinia. Nam bibendum placerat est, vel tempus metus varius quis. Phasellus viverra accumsan commodo. Donec pharetra massa eget molestie viverra.
