--- a/templates/genre.html
+++ b/templates/genre.html
@@ -1,9 +1,11 @@
 <html>
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mainstyle2.css') }}">
-    <title>Pick'N'Flix</title>
+  <title>Pick'N'Flix</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link href= "../static/styles/mainstyle2.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -55,7 +57,7 @@
 <table class="results">
 {% for films in film %}
     <tr>
-        <td> Your film choice is: {{films[1]}} </td>
+        <td> Your film choice is: <font color="Red">{{films[1]}} </font></td>
     </tr>
 {% endfor %}
 </center>
@@ -71,23 +73,25 @@
 <div class="footer">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <lr>
-        <li class="nav-item"><a href="/Partners" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
-        <li class="nav-item"><a href="/Aboutus" class="nav-link px-2 text-body-secondary">About</a></li>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Partners">Our Partners</a></li>
+        <li class="nav-item"><a href="/Aboutus">About</a></li>
       </lr>
-      <lr>
-        <li class="nav-item"><a href="/Terms" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
-        <li class="nav-item"><a href="/Faqs" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Terms">Terms & conditions</a></li>
+        <li class="nav-item"><a href="/Faqs">FAQs</a></li>
       </lr>
-      <lr>
-        <li class="nav-item"><a href="/Cookies" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
-        <li class="nav-item"><a href="/Privacypolicy" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+      <lr class="col-sm" style="text-align:center;">
+        <li class="nav-item"><a href="/Cookies">Manage Cookies</a></li>
+        <li class="nav-item"><a href="/Privacypolicy">Privacy Policy</a></li>
       </lr>
     </ul>
     <p class="text-center copy">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>   
 </body>
 
 </html>
